// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proof-of-evidence GET / should render the accept appellant proof of evidence page with the expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and accept appellant proof of evidence and witnesses</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Proof of evidence and witnesses</dt>
                    <dd                     class="govuk-summary-list__value">
                        <ol class="govuk-list govuk-!-margin-top-0 govuk-!-padding-left-0">
                            <li><a class="govuk-link" href="/documents/4881/download/ed52cdc1-3cc2-462a-8623-c1ae256969d6/blank copy 5.pdf"
                                target="_blank">blank copy 5.pdf</a>
                            </li>
                        </ol>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/appellant/manage-documents/135568/?backUrl=/proof-of-evidence/appellant/accept">Change<span class="govuk-visually-hidden"> proof of evidence and witnesses</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Review decisions</dt>
                    <dd class="govuk-summary-list__value">Accept proof of evidence and witnesses</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/appellant?backUrl=/appeals-service/appeal-details/2/proof-of-evidence/appellant/accept">Change</a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <button type="submit" class="govuk-button" data-module="govuk-button">Accept appellant proof of evidence and witnesses</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`proof-of-evidence GET / should render the accept lpa proof of evidence page with the expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and accept appellant proof of evidence and witnesses</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Proof of evidence and witnesses</dt>
                    <dd                     class="govuk-summary-list__value">
                        <ol class="govuk-list govuk-!-margin-top-0 govuk-!-padding-left-0">
                            <li><a class="govuk-link" href="/documents/4881/download/ed52cdc1-3cc2-462a-8623-c1ae256969d6/blank copy 5.pdf"
                                target="_blank">blank copy 5.pdf</a>
                            </li>
                        </ol>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/lpa/manage-documents/135568/?backUrl=/proof-of-evidence/lpa/accept">Change<span class="govuk-visually-hidden"> proof of evidence and witnesses</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Review decisions</dt>
                    <dd class="govuk-summary-list__value">Accept proof of evidence and witnesses</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/lpa?backUrl=/appeals-service/appeal-details/2/proof-of-evidence/lpa/accept">Change</a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <button type="submit" class="govuk-button" data-module="govuk-button">Accept appellant proof of evidence and witnesses</button>
            </form>
        </div>
    </div>
</main>"
`;
